fix: header styling on mobile (padding bottom)

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -116,7 +116,10 @@
     margin-right: 1.5rem;
   }
   .header {
-    padding-bottom: 2rem;
+    background-position: right;
+  }
+  .header_color_bg {
+    padding-bottom: 4rem;
   }
   .logo {
     height: 5rem;
